tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/set_authority_header/a/to_tproxy/_test_context/VirtualService.3320787897.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - tproxy
  http:
  - headers:
      request:
        set:
          :authority: my-custom-authority
    route:
    - destination:
        host: tproxy
